force-app/main/default/objects/Pop_Reminder__c/Pop_Reminder__c.object-meta.xml
<CustomObject>
    <label>Pop Reminder</label>
    <nameField>
        <label>Pop Reminder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pop Reminders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>