force-app/main/default/objects/Pop_Reminder__c/fields/Pop_User__c.field-meta.xml
<CustomField>
    <fullName>Pop_User__c</fullName>
    <label>Pop User</label>
    <referenceTo>Pop_User__c</referenceTo>
    <relationshipLabel>Pop Reminders</relationshipLabel>
    <relationshipName>Pop_Reminders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>