force-app/main/default/objects/Pop_Reminder__c/fields/Reminder_Description__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Description__c</fullName>
    <label>Reminder Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>