force-app/main/default/objects/Pop_Reminder__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Counting Down</fullName>
            </value>
            <value>
                <fullName>Almost Due</fullName>
            </value>
            <value>
                <fullName>Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>